<resources>
    <string name="app_name" translatable="false">Podfler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_plant_watcher">New plant watcher</string>
    <string name="my_plants">My plants</string>
    <string name="install_first_plantwatcher">Install your first PlantWatcher</string>
    <string name="ip_address">IP address</string>
    <string name="name">Name</string>
    <string name="add_plant_watcher">Add plant watcher</string>
    <string name="air_humidity">Air humidity :</string>
    <string name="air_temperature">Air temperature :</string>
    <string name="ground_humidity">Ground humidity :</string>
    <string name="luminosity">Luminosity :</string>
</resources>
